dentist can be chosen from drop-down list

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,7 +3,7 @@ Size.dentistVisitDTO.dentistName=Please enter the dentist name! The name length 
 NotNull.dentistVisitDTO.visitTime=The date field can not be empty!
 
 registration.ok = The registration was successful!
-dentist.name = Dentist name
+dentist.name = Choose Dentist
 visit.date = Visit date
 register.visit = Register
 
