server-side verification for date of visit

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,4 +1,4 @@
-typeMismatch.dentistVisitDTO.visitTime = Wrong format. Use dd.MM.yyyy format
+typeMismatch.dentistVisitDTO.visitTime = Wrong format. Use yyyy-MM-dd format
 Size.dentistVisitDTO.dentistName=Please enter the dentist name! The name length must be between 1 and 50 characters
 NotNull.dentistVisitDTO.visitTime=The date field can not be empty!
 
