change date picker to dateTime picker

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -4,7 +4,7 @@ NotNull.dentistVisitDTO.visitTime=The date field can not be empty!
 
 registration.ok = The registration was successful!
 dentist.name = Choose Dentist
-visit.date = Visit date
+visit.dateAndTime = Visit date and time
 register.visit = Register
 
 name.error = Name error!
