--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,11 +1,11 @@
-typeMismatch.dentistVisitDTO.visitTime = Wrong format. Use yyyy-MM-ddThh:mm format
-Size.dentistVisitDTO.dentistName=Please enter the dentist name! The name length must be between 1 and 50 characters
-NotNull.dentistVisitDTO.visitTime=The date field can not be empty!
+typeMismatch.dentistAppointmentDTO.appointmentTime = Wrong format. Use yyyy-MM-ddThh:mm format
+Size.dentistAppointmentDTO.dentistName=Please enter the dentist name! The name length must be between 1 and 50 characters
+NotNull.dentistAppointmentDTO.appointmentTime=The date field can not be empty!
 
 registration.ok = The registration was successful!
 dentist.name = Choose Dentist
-visit.dateAndTime = Visit date and time
-register.visit = Register
+appointment.dateAndTime = Appointment date and time
+register.appointment = Register
 
 name.error = Name error!
 date.error = Date error!
