create ListOfDentistAppointmentsDTO and editing appointments without verification

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,6 +3,8 @@ Size.dentistAppointmentDTO.dentistName=Please enter the dentist name! The name l
 NotNull.dentistAppointmentDTO.appointmentTime=The date field can not be empty!
 
 registration.ok = The registration was successful!
+registration.edited = The edit was successful!
+registration.deleted = The deletion was successful!
 dentist.name = Choose Dentist
 appointment.dateAndTime = Appointment date and time
 register.appointment = Register
