make searchDTO, create search div in frontend, change form.html a bit to make it bit more presentable

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -7,7 +7,7 @@ registration.edited = The edit was successful!
 registration.deleted = The deletion was successful!
 dentist.name = Choose Dentist
 appointment.dateAndTime = Appointment date and time
-register.appointment = Register
+register.appointment = REGISTER
 
 name.error = Name error!
 date.error = Date error!
