add some properties to messages.properties

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -5,9 +5,14 @@ NotNull.dentistAppointmentDTO.appointmentTime=The date field can not be empty!
 registration.ok = The registration was successful!
 registration.edited = The edit was successful!
 registration.deleted = The deletion was successful!
-dentist.name = Choose Dentist
-appointment.dateAndTime = Appointment date and time
-register.appointment = REGISTER
+
+dentist.name = Dentist
+appointment.dateAndTime = Appointment
+appointments.none = No Appointments have been made
+
+register.button = REGISTER
+edit.button = EDIT
+delete.button = DELETE
 
 name.error = Name error!
 date.error = Date error!
